--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev"
+  },
+  "engines": {
+    "node": "10"
   }
 }
