--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"    
+    "start:dev": "sirv public --single --dev"  ,
+    "gp": "deployghp.bat"  
   },
   "engines": {
     "node": "10"
